--- a/blog/views/pagelet/LoadMore.html
+++ b/blog/views/pagelet/LoadMore.html
@@ -1,31 +1,33 @@
 <div class='col-sm-12 col-md-8'>
-	<a id='loadMore' href='javascript:loadMore()' data-current-page='1' class='btn btn-block' data-url='${virtualPath}${loadMore}/more'>加载更多...</a>
+	<a id='loadMore' href='javascript:;' data-current-page='1' class='btn btn-block' data-url='${virtualPath}${loadMore}/more'>加载更多...</a>
 </div>
 <script type='text/javascript'>
-function loadMore(){
-	var widget = $('#loadMore');
-	widget.attr('disabled', true);
-	var text = widget.text();
-	widget.text('费劲儿加载中...');
-	var currPage = widget.data('current-page') + 1;
-	var data = {
-		data: JSON.stringify({
-			Current: currPage
-		})
-	};
-	$.ajax({
-		url: $().olxUtilRandomUrl(widget.data('url')),
-		type: 'GET',
-		dataType: 'html',
-		data: data
-	}).done(function (data){
-		if('' !== $.trim(data)){
-			widget.data('current-page', currPage);
-			$('.artIntro').parent().append(data);
-		}
-	}).complete(function(){
-		widget.text(text);
-		widget.attr('disabled', false);
+$(function(){
+	$('#loadMore').click(function(){
+		var widget = $(this);
+		widget.attr('disabled', true);
+		var text = widget.text();
+		widget.text('费劲儿加载中...');
+		var currPage = widget.data('current-page') + 1;
+		var data = {
+			data: JSON.stringify({
+				Current: currPage
+			})
+		};
+		$.ajax({
+			url: $().olxUtilRandomUrl(widget.data('url')),
+			type: 'GET',
+			dataType: 'html',
+			data: data
+		}).done(function (data){
+			if('' !== $.trim(data)){
+				widget.data('current-page', currPage);
+				$('.artIntro').parent().append(data);
+			}
+		}).complete(function(){
+			widget.text(text);
+			widget.attr('disabled', false);
+		});
 	});
-}
+});
 </script>
