--- a/blog/views/pagelet/IndexHeader.html
+++ b/blog/views/pagelet/IndexHeader.html
@@ -17,7 +17,8 @@
 <!--[if lte IE 7]>
 <link rel='stylesheet' type='text/css' href='${cdn}verybsie/1.0.0/css/bootstrap-verybsie.css' />
 <![endif]-->
-<link rel='stylesheet' type='text/css' href='${cdn}bootstrap/3.0.3/dist/css/bootstrap.css?v3.0.3' media='screen' />
+<link rel='stylesheet' type='text/css' href='${cdn}bootstrap/3.0.3/dist/css/bootstrap.min.css?v3.0.3' media='screen' />
 <link rel='stylesheet' type='text/css' href='${cdn}bootstrap/3.0.3/dist/css/bootstrap-theme.min.css?v3.0.3' media='screen' />
 <link rel='stylesheet' type='text/css' href='${cdn}FlexSlider/2.2.2/flexslider.css' media='screen' />
 <link rel='stylesheet' type='text/css' href='${virtualPath}public/assets/css/olx/olx.css?v3' media='screen' />
+<script type='text/javascript' src='${cdn}jquery/2.0.2/jquery.min.js?v2.0.2'></script>
