--- a/blog/views/pagelet/TopMarks.vm.html
+++ b/blog/views/pagelet/TopMarks.vm.html
@@ -7,3 +7,10 @@
 		</li>#end
 	</ul>
 </section>
+<script type='text/javascript'>
+$(function(){
+	$('.flexslider').flexslider({
+		animation: 'slide'
+	});
+});
+</script>
