--- a/blog/views/pagelet/Side.Art.View.vm.html
+++ b/blog/views/pagelet/Side.Art.View.vm.html
@@ -6,7 +6,7 @@
 		<ul class='list-group'>
 			#foreach($article in $articles)<li class='list-group-item'>
 				<span class='badge'>$article.ViewCount2Money</span>
-				<a href='${virtualPath}archive/${article._id}.html' title='创建于 $article.sPostTime'>
+				<a href='${virtualPath}archive/${article._id}.html' title='创建于 #formatDate($article.PostTime)'>
 					<div>$article.Title</div>
 				</a>
 			</li>#end
