--- a/blog/views/pagelet/Tags.vm.html
+++ b/blog/views/pagelet/Tags.vm.html
@@ -8,7 +8,7 @@
 		<div class='panel-body'>
 			#foreach($article in $tag.Articles)<p>
 				#toSDate(${article.PostTime}):
-				<a title='创建于 $article.sPostTime' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
+				<a title='创建于 #formatDate($article.PostTime)' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
 				<span class='badge'>${article.ViewCount2Money}</span>
 			</p>#end
 		</div>
