--- a/blog/views/pagelet/Archives.vm.html
+++ b/blog/views/pagelet/Archives.vm.html
@@ -12,7 +12,7 @@
 					#foreach($article in $archiveChild.Articles)<p>
 						#toDay(${article.PostTime})日:
 						<a title='创建于 #formatDate($article.PostTime)' href='${virtualPath}archive/${article._id}.html'>${article.Title}</a>
-						<span class='badge'>${article.ViewCount2Money}</span>
+						<span class='badge'>#num2Money($article.ViewCount)</span>
 					</p>#end
 				</div>
 			</div>
