--- a/blog/views/pagelet/Side.Art.View.vm.html
+++ b/blog/views/pagelet/Side.Art.View.vm.html
@@ -5,7 +5,7 @@
 	<div class='panel-body'>
 		<ul class='list-group'>
 			#foreach($article in $articles)<li class='list-group-item'>
-				<span class='badge'>$article.ViewCount2Money</span>
+				<span class='badge'>#num2Money($article.ViewCount)</span>
 				<a href='${virtualPath}archive/${article._id}.html' title='创建于 #formatDate($article.PostTime)'>
 					<div>$article.Title</div>
 				</a>
