--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -16,7 +16,8 @@
 								<li>
 									<div class='glyphicon glyphicon-home'></div>
 									<a href='${virtualPath}index.html'>首页</a></li>
-								<li class='active'>档案馆</li>
+								<li class='active'>
+									<a href='${virtualPath}archive/'>档案馆</a></li>
 							</ol>
 							#include('pagelet/html/archives.html')
 							<div>
