--- a/blog/views/Article.html
+++ b/blog/views/Article.html
@@ -16,7 +16,10 @@
 								<li>
 									<div class='glyphicon glyphicon-home'></div>
 									<a href='${virtualPath}index.html'>首页</a></li>
-								<li class='active'>档案馆</li>
+								<li class='active'>
+									<a href='${virtualPath}archive/'>档案馆</a></li>
+								<li class='active'>
+									<a href='${virtualPath}archive/${article._id}.html'>$article.Title</a></li>
 							</ol>
 							<div>
 								<a href='javascript:;'>
