--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -16,7 +16,8 @@
 								<li>
 									<div class='glyphicon glyphicon-home'></div>
 									<a href='${virtualPath}index.html'>首页</a></li>
-								<li class='active'>标签</li>
+								<li class='active'>
+									<a href='${virtualPath}archive/tag/'>标签</a></li>
 							</ol>
 							<div id='tags'>
 								<div class='panel-group olx-accordion'>
