--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -39,6 +39,21 @@
 		}
 	}
 
+	.content {
+		font-size: 12px;
+		margin-bottom: 20px
+	}
+
+	.copyright {
+		font-size: 12px;
+		a {
+			color: #64A765;
+			&:focus, &:hover {
+				text-decoration: underline;
+			}
+		}
+	}
+
 	figure {
 		padding: 0;
 		margin-bottom: 10px;
