--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -29,13 +29,6 @@
 				background-color: #d9534f;
 				transition: all 0.25s ease-in-out 0s;
 			}
-			&:nth-child(2) {
-				a {
-					&:hover {
-						text-decoration: underline
-					}
-				}
-			}
 		}
 	}
 
@@ -50,6 +43,14 @@
 			color: #64A765;
 			&:focus, &:hover {
 				text-decoration: underline;
+			}
+		}
+	}
+
+	.footer {
+		a {
+			&:hover {
+				text-decoration: underline
 			}
 		}
 	}
