--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -48,6 +48,7 @@
 	}
 
 	.footer {
+		margin-bottom: 10px;
 		a {
 			&:hover {
 				text-decoration: underline
@@ -72,6 +73,10 @@
 			}
 		}
 	}
+}
+
+.favorite {
+	font-size: 12px;
 }
 
 @media screen and (max-width: 640px){
