--- a/blog/views/Article.html
+++ b/blog/views/Article.html
@@ -76,6 +76,9 @@
 							</div>
 						</div>
 					</div>
+					<div class='alert alert-danger favorite ta'>
+						<div class='glyphicon glyphicon-heart'></div> 您可能也喜欢
+					</div>
 				</div>
 				<div class='col-sm-12 col-md-4'>
 					#include('pagelet/html/side.art.view.top10.html')
