--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -82,10 +82,13 @@
 @media screen and (max-width: 640px){
 	.article {
 		.title {
-			margin: 10px 0;
+			margin: 5px 0;
 			>h2 {
 				font-size: 18px;
 			}
+		}
+		.nav, .footer {
+			margin-bottom: 5px
 		}
 	}
 }
