--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -33,12 +33,16 @@
 	}
 
 	.content {
+		word-wrap: break-word;
+		word-break: normal;
 		font-size: 12px;
 		margin-bottom: 20px
 	}
 
 	.copyright, .page {
 		font-size: 12px;
+		word-wrap: break-word;
+		word-break: normal;
 		a {
 			color: #64A765;
 			&:focus, &:hover {
