--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -79,8 +79,29 @@
 	}
 }
 
-.favorite {
+.fav {
 	font-size: 12px;
+}
+
+.fav3 {
+	min-height: 200px;
+	font-size: 12px;
+	h5 {
+		margin-top: 0;
+		a {
+			font-size: 12px;
+			color: #D2322D;
+			&:hover, &:focus {
+				text-decoration: underline;
+			}
+		}
+	}
+	p {
+		&:nth-child(2) {
+			margin-top: 20px;
+			height: 100px;
+		}
+	}
 }
 
 @media screen and (max-width: 640px){
