--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -14,7 +14,7 @@
 						<div class='panel-body'>
 							<ol class='breadcrumb'>
 								<li>
-									<div class='glyphicon glyphicon-home'></div>
+									<i class='fa fa-home fa-fw'></i>
 									<a href='${virtualPath}index.html'>首页</a></li>
 								<li class='active'>
 									<a href='${virtualPath}archive/'>档案馆</a></li>
