--- a/blog/public/site/css/artintro.less
+++ b/blog/public/site/css/artintro.less
@@ -147,7 +147,10 @@
 			}
 			a {
 				font-size: 12px;
-				width: 100%
+				width: 100%;
+				.badge {
+					vertical-align: middle;
+				}
 			}
 		}
 	}
