--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -48,6 +48,11 @@ body {
 				background-color: #999999;
 			}
 		}
+		.badge {
+			&:hover {
+				background-color: #d9534f
+			}
+		}
 	}
 
 	.breadcrumb {
