--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -2,6 +2,12 @@ body, h1, h2, h3, h4, h5, h6 {
 	font-family: 'Microsoft Yahei',Helvetica,Arial,sans-serif;
 }
 
+.breadcrumb > li + li:before {
+	color: #ccc;
+	content: '/';
+	padding: 0 2px;
+}
+
 body {
 	background: url('images/bg.jpg') repeat scroll 0 0 rgba(0, 0, 0, 0);
 
