--- a/blog/views/Article.html
+++ b/blog/views/Article.html
@@ -17,10 +17,8 @@
 								<li>
 									<i class='fa fa-home fa-fw'></i>
 									<a href='${virtualPath}index.html'>首页</a></li>
-								<li class='active'>
-									<a href='${virtualPath}archive/'>档案馆</a></li>
-								<li class='active'>
-									<a href='${virtualPath}archive/${article._id}.html'>$article.Title</a></li>
+								<li class='active'><a href='${virtualPath}archive/'>档案馆</a></li>
+								<li class='active'><a href='${virtualPath}archive/${article._id}.html'>$article.Title</a></li>
 							</ol>
 							<div class='title'>
 								<h2><a href='${virtualPath}archive/${article._id}.html'>$article.Title</a></h2>
