--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -16,8 +16,7 @@
 								<li>
 									<i class='fa fa-home fa-fw'></i>
 									<a href='${virtualPath}index.html'>首页</a></li>
-								<li class='active'>
-									<a href='${virtualPath}archive/'>档案馆</a></li>
+								<li class='active'><a href='${virtualPath}archive/'>档案馆</a></li>
 							</ol>
 							#include('pagelet/html/archives.html')
 							<div>
