--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -2,18 +2,6 @@
 <html lang='zh-CN'>
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<style type='text/css'>
-		.list-group-item:first-child {
-			border-top-left-radius: 0;
-			border-top-right-radius: 0;
-		}
-		#blogFrm input {
-			font-size: 12px;
-		}
-		#blogFrm textarea {
-			font-size: 12px;
-		}
-		</style>
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
@@ -31,64 +19,7 @@
 								<li class='active'><a href='javascript:;'>博客</a></li>
 								<li class='active'><a href='../new/blog'>发表博文</a></li>
 							</ol>
-							<form id='blogFrm' role='form' onsubmit='return false;' data-url='new-blog'>
-								<div class='form-group'>
-									<label for='blogFrm_Title'><b>博客标题</b></label>
-									<input type='text' class='form-control' name='Title' id='blogFrm_Title' placeholder='博客标题'>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Intro'><b>博客摘要</b></label>
-									<textarea class='form-control' rows='3' name='Intro' id='blogFrm_Intro'
-										placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'></textarea>
-								</div>
-								<div class='form-group'>
-									<label for='container'><b>博客正文</b></label>
-									<!-- 加载编辑器的容器 -->
-									<script id='container' name='Content' type='text/plain'></script>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Tags'><b>标签</b></label>
-									<input type='text' class='form-control' name='Tags' id='blogFrm_Tags' placeholder='为你的博客设置标签，用逗号隔开，最多5个哦'>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Keys'><b>系统博客分类？</b></label>
-									<select class='form-control'>
-										<option value=''>未选择</option>
-									</select>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Keys'><b>文章类型？</b></label>
-									<select class='form-control'>
-										<option value=''>未选择</option>
-									</select>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Keys'><b>是否对所有人可见？</b></label>
-									<select class='form-control'>
-										<option value=''>未选择</option>
-									</select>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Keys'><b>是否允许评论？</b></label>
-									<select class='form-control'>
-										<option value=''>未选择</option>
-									</select>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Keys'><b>是否自动生成目录？</b></label>
-									<select class='form-control'>
-										<option value=''>未选择</option>
-									</select>
-								</div>
-								<div class='form-group'>
-									<label for='blogFrm_Keys'><b>是否在博客列表置顶？</b></label>
-									<select class='form-control'>
-										<option value=''>未选择</option>
-									</select>
-								</div>
-								<button type='button' class='btn btn-primary' id='btn_sub'>提交</button>
-								<button type='button' class='btn btn-success'>保存草稿</button>
-							</form>
+							#parse('user/admin/blogFrm.html')
 						</div>
 					</div>
 				</div>
@@ -97,17 +28,6 @@
 		#parse('pagelet/IndexFooter.html')
 		#parse('pagelet/backTop.html')
 		#parse('pagelet/IndexJs.html')
-		<!-- 配置文件 -->
-		<script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.config.js'></script>
-		<!-- 编辑器源码文件 -->
-		<script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.all.js'></script>
-		<!-- 实例化编辑器 -->
-		<script type='text/javascript'>
-			var ue = UE.getEditor('container', {
-				autoHeightEnabled: false,
-				initialFrameHeight: 300
-			});
-		</script>
 		<!-- Own -->
 		<script type='text/javascript'>
 			function showVali(valiResu){ }
