--- a/blog/views/user/admin/Sidebar.html
+++ b/blog/views/user/admin/Sidebar.html
@@ -83,3 +83,9 @@
 		</div>
 	</div>
 </div>
+<style type='text/css'>
+.list-group-item:first-child {
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+</style>
