--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -40,7 +40,7 @@
 					if(!data.success) return showVali(data.msg);
 				}]);
 			}
-			$('#btn_sub').click(subFrm);
+			$('#blogFrm_btn_sub').click(subFrm);
 		</script>
 	</body>
 </html>
