--- a/blog/views/user/admin/NewBlog.html
+++ b/blog/views/user/admin/NewBlog.html
@@ -14,7 +14,7 @@
 						<div class='panel-body'>
 							<ol class='breadcrumb'>
 								<li>
-									<div class='glyphicon glyphicon-home'></div>
+									<i class='fa fa-home fa-fw'></i>
 									<a href='../../'>空间</a></li>
 								<li class='active'><a href='javascript:;'>博客</a></li>
 								<li class='active'><a href='../new/blog'>发表博文</a></li>
