--- a/blog/views/user/admin/blogFrm.html
+++ b/blog/views/user/admin/blogFrm.html
@@ -2,26 +2,32 @@
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Title'><b>博客标题</b></label>
 		<div class='col-sm-12'>
-			<input type='text' class='form-control' name='Title' id='blogFrm_Title' placeholder='博客标题'>
+			<input type='text' class='form-control' name='Title' id='blogFrm_Title' placeholder='博客标题'#if(!!$article) value='$article.Title'#end>
+		</div>
+	</div>
+	<div class='form-group'>
+		<label class='col-sm-12' for='blogFrm_Photo'><b>博客图片</b></label>
+		<div class='col-sm-12'>
+			<input type='text' class='form-control' name='Photo' id='blogFrm_Photo' placeholder='http://'#if(!!$article) value='$article.Photo'#end>
 		</div>
 	</div>
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Intro'><b>博客摘要</b></label>
 		<div class='col-sm-12'>
-			<textarea class='form-control' rows='3' name='Intro' id='blogFrm_Intro' placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'></textarea>
+			<textarea class='form-control' rows='3' name='Intro' id='blogFrm_Intro' placeholder='我们倡议为您的博客添加摘要，一段好的摘要能为你的博客添分加彩，同时也是对阅读者的一个非常好的引导。'>#if(!!$article)$article.Intro#end</textarea>
 		</div>
 	</div>
 	<div class='form-group'>
-		<label class='col-sm-12' for='blogFrm_container'><b>博客正文</b></label>
+		<label class='col-sm-12' for='blogFrm_Content'><b>博客正文</b></label>
 		<div class='col-sm-12'>
 			<!-- 加载编辑器的容器 -->
-			<script id='blogFrm_container' name='Content' type='text/plain'></script>
+			<script id='blogFrm_Content' name='Content' type='text/plain'>#if(!!$article)$article.Content#end</script>
 		</div>
 	</div>
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Tags'><b>标签</b></label>
 		<div class='col-sm-12'>
-			<input type='text' class='form-control' name='Tags' id='blogFrm_Tags' placeholder='为你的博客设置标签，用逗号隔开，最多5个哦'>
+			<input type='text' class='form-control' name='Tags' id='blogFrm_Tags' placeholder='为你的博客设置标签，用逗号隔开，最多5个哦'#if(!!$article) value='$article.Tags'#end>
 		</div>
 	</div>
 	<div class='form-group'>
@@ -36,8 +42,8 @@
 	<div class='form-group'>
 		<label class='col-sm-12'><b>文章类型？</b></label>
 		<div class='col-sm-12 fontSize'>
-			<input type='radio' name='ArtType' checked> 原创
-			<input type='radio' name='ArtType'> 转帖
+			<input type='radio' name='ArtiType' checked> 原创
+			<input type='radio' name='ArtiType'> 转帖
 		</div>
 	</div>
 	<div class='form-group'>
@@ -61,7 +67,13 @@
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Topmark'><b>是否在博客列表置顶？</b></label>
 		<div class='col-sm-12 fontSize'>
-			<input type='checkbox' name='Topmark' id='blogFrm_Topmark' value='option1'> 置顶
+			<input type='checkbox' name='Topmark' id='blogFrm_Topmark' value='1'> 置顶
+		</div>
+	</div>
+	<div class='form-group'>
+		<label class='col-sm-12' for='blogFrm_Bookmark'><b>是否设置滚动书签？</b></label>
+		<div class='col-sm-12 fontSize'>
+			<input type='checkbox' name='Bookmark' id='blogFrm_Bookmark' value='1'> 滚动
 		</div>
 	</div>
 	<button type='button' class='btn btn-primary' id='blogFrm_btn_sub'>提交</button>
@@ -78,7 +90,7 @@
 <script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.all.js'></script>
 <!-- 实例化编辑器 -->
 <script type='text/javascript'>
-	var ue = UE.getEditor('blogFrm_container', {
+	var ue = UE.getEditor('blogFrm_Content', {
 		autoHeightEnabled: false,
 		initialFrameHeight: 300
 	});
