--- a/blog/views/user/admin/blogFrm.html
+++ b/blog/views/user/admin/blogFrm.html
@@ -90,8 +90,10 @@
 <script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.all.js'></script>
 <!-- 实例化编辑器 -->
 <script type='text/javascript'>
+$(function(){
 	var ue = UE.getEditor('blogFrm_Content', {
 		autoHeightEnabled: false,
 		initialFrameHeight: 300
 	});
+});
 </script>
