--- a/blog/views/user/admin/blogFrm.html
+++ b/blog/views/user/admin/blogFrm.html
@@ -1,4 +1,4 @@
-<form class='form-horizontal' id='blogFrm' role='form' onsubmit='return false;' data-url='new-blog'>
+<form class='form-horizontal' id='blogFrm' role='form' onsubmit='return false;' data-url='$frmUrl'>
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Title'><b>博客标题</b></label>
 		<div class='col-sm-12'>
