--- a/blog/public/assets/css/olx/olx.less
+++ b/blog/public/assets/css/olx/olx.less
@@ -1,5 +1,6 @@
 body, h1, h2, h3, h4, h5, h6 {
 	font-family: 'Microsoft Yahei',Helvetica,Arial,sans-serif;
+	padding-top: 0;
 }
 
 .breadcrumb > li + li:before {
