--- a/blog/views/user/admin/blogFrm.html
+++ b/blog/views/user/admin/blogFrm.html
@@ -1,3 +1,4 @@
+<link rel='stylesheet' type='text/css' href='${cdn}bootstrap-markdown/2.5.0/css/bootstrap-markdown.min.css?v3.0.3' media='screen' />
 <form class='form-horizontal' id='blogFrm' role='form' onsubmit='return false;' data-url='$frmUrl'>
 	<div class='form-group'>
 		<label class='col-sm-12' for='blogFrm_Title'><b>博客标题</b></label>
@@ -21,7 +22,8 @@
 		<label class='col-sm-12' for='blogFrm_Content'><b>博客正文</b></label>
 		<div class='col-sm-12'>
 			<!-- 加载编辑器的容器 -->
-			<script id='blogFrm_Content' name='Content' type='text/plain'>#if(!!$article)$article.Content#end</script>
+			#*<script id='blogFrm_Content' name='Content' type='text/plain'>#if(!!$article)$article.Content#end</script>*#
+			<textarea id='blogFrm_Content' name='Content' data-provide='markdown' rows='15'>#if(!!$article)$article.Content#end</textarea>
 		</div>
 	</div>
 	<div class='form-group'>
@@ -84,16 +86,20 @@
 	font-size: 12px;
 }
 </style>
-<!-- 配置文件 -->
+<script type='text/javascript' src='${cdn}bootstrap-markdown/2.5.0/js/bootstrap-markdown.js?v3.0.3'></script>
+#*<!-- 配置文件 -->
 <script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.config.js'></script>
 <!-- 编辑器源码文件 -->
-<script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.all.js'></script>
+<script type='text/javascript' src='${cdn}ueditor/1.4.3/ueditor.all.js'></script>*#
 <!-- 实例化编辑器 -->
 <script type='text/javascript'>
 $(function(){
-	var ue = UE.getEditor('blogFrm_Content', {
+	#*var ue = UE.getEditor('blogFrm_Content', {
 		autoHeightEnabled: false,
+		wordCount:false,
+		// elementPathEnabled:false,
 		initialFrameHeight: 300
 	});
+	$('#blogFrm_Content').markdown();*#
 });
 </script>
