--- a/blog/public/user/css/register.less
+++ b/blog/public/user/css/register.less
@@ -46,8 +46,10 @@ form {
 
 @media screen and (max-width:640px) {
 	form {
-		label {
-			display: none
+		>div {
+			>label {
+				display: none
+			}
 		}
 		#lab_changeImg {
 			display: block
