--- a/blog/views/user/admin/EditBlog.html
+++ b/blog/views/user/admin/EditBlog.html
@@ -29,7 +29,7 @@
 									<i class='fa fa-home fa-fw'></i>
 									<a href='../../../'>空间</a></li>
 								<li class='active'><a href='javascript:;'>博客</a></li>
-								<li class='active'><a href='../new/blog'>修改博文</a></li>
+								<li class='active'><a href='javascript:;'>修改博文</a></li>
 							</ol>
 							#parse('user/admin/blogFrm.html')
 						</div>
