--- a/blog/views/pagelet/IndexJs.html
+++ b/blog/views/pagelet/IndexJs.html
@@ -4,6 +4,10 @@
 <script type='text/javascript' src='${cdn}underscore/1.5.1/underscore.min.js'></script>
 <script type='text/javascript' src='${cdn}bootstrap/3.2.0/dist/js/bootstrap.min.js?v3.2.0'></script>
 <script type='text/javascript' src='${cdn}FlexSlider/2.2.2/jquery.flexslider-min.js' defer></script>
+<script type='text/javascript'>
+var ZeroClipboard_PATH = '${cdn}bootstrap/3.2.0/docs/assets/flash/ZeroClipboard.swf';
+</script>
+<script type='text/javascript' src='${cdn}bootstrap/3.2.0/docs/assets/js/docs.min.js?v3.2.0'></script>
 <!-- Olx -->
 <script type='text/javascript' src='${cdn}olxjs/1.0.0/js/olx.min.js'></script>
 <!--[if lte IE 9]>
