--- a/blog/public/site/css/article.less
+++ b/blog/public/site/css/article.less
@@ -36,7 +36,17 @@
 		word-wrap: break-word;
 		word-break: normal;
 		font-size: 12px;
-		margin-bottom: 20px
+		margin-bottom: 20px;
+
+		.bs-callout {
+			padding: 10px;
+			>h4 {
+				font-size: 14px
+			}
+			>p {
+				margin: 0 0 5px;
+			}
+		}
 	}
 
 	.copyright, .page {
