--- a/blog/views/Article.html
+++ b/blog/views/Article.html
@@ -130,5 +130,6 @@
 		var ZeroClipboard_PATH = '${cdn}bootstrap/3.2.0/docs/assets/flash/ZeroClipboard.swf';
 		</script>
 		<script type='text/javascript' src='${cdn}bootstrap/3.2.0/docs/assets/js/docs.min.js?v3.2.0'></script>
+		#parse('pagelet/LastJs.html')
 	</body>
 </html>
