--- a/blog/views/Tags.html
+++ b/blog/views/Tags.html
@@ -48,5 +48,6 @@
 		#parse('pagelet/backTop.html')
 		#parse('pagelet/IndexJs.html')
 		<!-- Own -->
+		#parse('pagelet/LastJs.html')
 	</body>
 </html>
