--- a/blog/views/pagelet/IndexFooter.html
+++ b/blog/views/pagelet/IndexFooter.html
@@ -2,7 +2,12 @@
 	<div class='container'>
 		<div>
 			<p>Copyright © 2014 <a href='http://www.foreworld.net'>洪荒</a> FOREWORLD.NET. All Rights Reserved.</p>
-			<p><a href='http://www.miibeian.gov.cn'>豫ICP备09015367号</a></p>
+			<p>
+				<a href='http://www.miibeian.gov.cn' style='vertical-align:bottom;'>豫ICP备09015367号</a>
+				<a target='_blank' href='http://tongji.baidu.com/hm-web/welcome/ico?s=3afbf84e4628a9eb94ccbc0dcea8c859'>
+					<img width='20' height='20' border='0' src='http://eiv.baidu.com/hmt/icon/21.gif'>
+				</a>
+			</p>
 		</div>
 		<div>
 			<a href='tencent://message/?uin=3203317&Site=http://www.foreworld.net&Menu=yes'>
