--- a/blog/views/Archive.html
+++ b/blog/views/Archive.html
@@ -44,5 +44,6 @@
 		#parse('pagelet/backTop.html')
 		#parse('pagelet/IndexJs.html')
 		<!-- Own -->
+		#parse('pagelet/LastJs.html')
 	</body>
 </html>
