--- a/blog/views/Category.html
+++ b/blog/views/Category.html
@@ -28,5 +28,6 @@
 		#parse('pagelet/backTop.html')
 		#parse('pagelet/IndexJs.html')
 		<!-- Own -->
+		#parse('pagelet/LastJs.html')
 	</body>
 </html>
