--- a/blog/views/user/My.html
+++ b/blog/views/user/My.html
@@ -62,5 +62,6 @@
 		#parse('pagelet/backTop.html')
 		#parse('pagelet/IndexJs.html')
 		<!-- Own -->
+		#parse('pagelet/LastJs.html')
 	</body>
 </html>
