--- a/blog/views/Article.html
+++ b/blog/views/Article.html
@@ -129,7 +129,7 @@
 		<script type='text/javascript'>
 		var ZeroClipboard_PATH = '${cdn}bootstrap/3.2.0/docs/assets/flash/ZeroClipboard.swf';
 		</script>
-		<script type='text/javascript' src='${cdn}bootstrap/3.2.0/docs/assets/js/docs.min.js?v3.2.0'></script>
+		<script type='text/javascript' src='${cdn}bootstrap/3.2.0/docs/assets/js/docs.min.js?v3.2.0' defer='defer'></script>
 		#parse('pagelet/LastJs.html')
 	</body>
 </html>
