--- a/blog/views/pagelet/ArticleIntros.vm.html
+++ b/blog/views/pagelet/ArticleIntros.vm.html
@@ -6,7 +6,7 @@
 			<span class='day'>#toDay($article.PostTime)</span>
 		</div>
 		<div class='title'>
-			<h2><a href='${virtualPath}archive/${article._id}.html'>$article.Title</a></h2>
+			<h2><a id='${article._id}' href='${virtualPath}archive/${article._id}.html'>$article.Title</a></h2>
 		</div>
 		<div class='tag ta nav'>
 			<span class='label label-default'>
