--- a/blog/views/pagelet/LoadMore.html
+++ b/blog/views/pagelet/LoadMore.html
@@ -11,7 +11,8 @@ $(function(){
 		var text = widget.text();
 		widget.find('i').addClass('fa-spinner');
 		widget.find('span').text('费劲儿加载中...');
-		var currPage = widget.data('current-page') + 1;
+		// var currPage = widget.data('current-page') + 1;
+		var currPage = $('.artIntro .title a:last').attr('id');
 		var data = {
 			data: JSON.stringify({
 				Current: currPage
@@ -24,7 +25,7 @@ $(function(){
 			data: data
 		}).done(function (data){
 			if('' !== $.trim(data)){
-				widget.data('current-page', currPage);
+				// widget.data('current-page', currPage);
 				$('.artIntro').parent().append(data);
 			}
 		}).complete(function(){
