--- a/blog/views/user/Sidebar.html
+++ b/blog/views/user/Sidebar.html
@@ -11,9 +11,9 @@
 				</div>
 				<div class='owner-right'>
 					<div class='user_name'>
-						<a title='$_user.sSex' href='javascript:;'>$_user.Nickname</a></div>
+						<a title='#toSex($_user.Sex)' href='javascript:;'>$_user.Nickname</a></div>
 					<div class='opt'>
-						<img title='$_user.sSex'
+						<img title='#toSex($_user.Sex)'
 							src='${virtualPath}public/assets/images/share/16x16/men.png'>
 						<a href='javascript:;'>修改资料</a>
 						<a href='javascript:;'>更换头像</a>
