--- a/blog/views/Article.html
+++ b/blog/views/Article.html
@@ -29,9 +29,9 @@
 									<span class='glyphicon glyphicon-calendar'></span>
 									<a title='创建于 #formatDate($article.PostTime)'>#toSDate($article.PostTime)</a>
 								</span>
-								#*#if($article.aTags)<span class='label label-default'>
+								#*#if($article.Tags)<span class='label label-default'>
 									<span class='glyphicon glyphicon-tag'></span>
-									#foreach($tag in $article.aTags)<a rel='tag' title='查看 $tag.TagName 标签' href='${virtualPath}archive/tag/$tag.TagName/'>$tag.TagName</a>#if($foreach.hasNext),#end
+									#foreach($tag in $article.Tags)<a rel='tag' title='查看 $tag 标签' href='${virtualPath}archive/tag/$tag/'>$tag</a>#if($foreach.hasNext),#end
 									#end
 								</span>#end*#
 								<span class='label label-default'>
@@ -48,9 +48,9 @@
 							</figure>#end
 							<div class='content'>#toHtml($article.Content)</div>
 							<div class='footer tag'>
-								#if($article.aTags)<span class='label label-default'>
+								#if(0<$article.Tags.length)<span class='label label-default'>
 									<span class='glyphicon glyphicon-tag'></span>
-									#foreach($tag in $article.aTags)<a rel='tag' title='查看 $tag.TagName 标签' href='${virtualPath}archive/tag/$tag.TagName/'>$tag.TagName</a>#if($foreach.hasNext),#end
+									#foreach($tag in $article.Tags)<a rel='tag' title='查看 $tag 标签' href='${virtualPath}archive/tag/$tag/'>$tag</a>#if($foreach.hasNext),#end
 									#end
 								</span>#end
 							</div>
